--- a/src/Pages/Chat/Chat.css
+++ b/src/Pages/Chat/Chat.css
@@ -14,3 +14,16 @@
     border:1px solid gray;
 
   }
+
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+
+.spin {
+    animation: spin 0.5s linear infinite;
+}
