Added more features

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -14,3 +14,34 @@ body {
 ::-webkit-scrollbar {
     display: none;
   }
+
+
+.glow-container {
+  position: relative;
+}
+
+.bg-shape {
+    width: 80vw;
+    height: 450px;
+    border-radius: 9999px;
+    position: relative;
+    filter: blur(600px);
+    background-color: rgb(4, 8, 225);
+}
+
+.glow {
+  position: absolute;
+  width: 15vw;
+  height: 130px;
+  border-radius: 9999px;
+  background: rgba(255, 255, 255, 0.5);
+  filter: blur(150px);
+  pointer-events: none;
+  display: none;
+  transform: translate(-50%, -50%);
+
+}
+
+.glow-container:hover .glow {
+  display: block;
+}
