--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -3,8 +3,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px; /* Adjust if needed */
-    backdrop-filter: blur(10px); /* Adjust the blur intensity as needed */
-    background-color: transparent; /* Adjust the background color and opacity */
-    z-index: 1000; /* Ensure it stays on top of other elements */
+    height: 80px;
+    backdrop-filter: blur(10px); 
+    background-color: transparent;
+    z-index: 1000;
   }
+
+.tspace{
+  letter-spacing: 0.11rem;
+}
