--- a/src/Pages/Chat/Chat.css
+++ b/src/Pages/Chat/Chat.css
@@ -27,3 +27,22 @@
 .spin {
     animation: spin 0.5s linear infinite;
 }
+
+.typing {
+  width: 400ch;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
